MAS2 Decoder for files of type 65536+. These files are compressed by an algorithm of ISI. Needed some time to guess/find the right values.

--- a/MAS2Extract/MAS2Extract.csproj
+++ b/MAS2Extract/MAS2Extract.csproj
@@ -46,7 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MAS2File.cs" />
+    <Compile Include="MAS2Codec.cs" />
+    <Compile Include="MAS2File.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="MAS2Reader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
